--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "polished": "^4.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.14.4",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "react-switch": "^6.0.0",
@@ -43,6 +44,7 @@
   "devDependencies": {
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-modal": "^3.13.1",
     "@types/react-router": "^5.1.17",
     "@types/react-router-dom": "^5.1.4",
     "@types/styled-components": "^5.1.0",
